--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "nodemailer": "^4.6.8",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "svg-captcha": "^1.3.11"
   }
 }
