EN: updated scripts/start.

--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -4,7 +4,7 @@
   "description": "A web app for JavaScript online test",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
