--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "nodemailer": "^4.6.8",
     "path": "^0.12.7",
     "svg-captcha": "^1.3.11"
